Added udskriv etikette buttons

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -296,132 +296,167 @@ Nørregade 56
                           </ul>
                         </div>
                       </div>
-                      <div
-                        class="d-flex align-items-center justify-content-between"
-                      >
-                        <h4 class="font-weight-bold mt-3 ml-3 mb-4">
-                          <div class="d-flex align-items-center">
-                            <svg
-                              xmlns="http://www.w3.org/2000/svg"
-                              width="24"
-                              height="24"
-                              viewBox="0 0 16 16"
-                            >
-                              <path
-                                fill-rule="evenodd"
-                                fill="#686868"
-                                d="M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z"
-                              />
-                            </svg>
-
-                            <span class="ml-3">Eksemplarer</span>
-                          </div>
-                        </h4>
-                      </div>
-                      <div class="card bg-white ml-3 mr-3">
-                        <div class="card-body p-0 m-0">
-                          <table
-                            id="eksemplar-tabel"
-                            width="100%"
-                            class="table table-hover sorting table-striped mb-0"
+                      <hr />
+                      <div class="row">
+                        <div class="col-sm-12">
+                          <div
+                            class="d-flex align-items-center justify-content-between mb-3 mt-3"
                           >
-                            <thead>
-                              <tr>
-                                <th scope="col">Navn</th>
-                                <th scope="col">Type</th>
-                                <th scope="col">HE-Navn</th>
-                                <th scope="col">HE-Fra</th>
-                                <th scope="col">HE-Til</th>
-                                <th scope="col">Eks. Type</th>
-                                <th scope="col">Eks. Navn</th>
-                                <th scope="col">Sort. felt.</th>
-                                <th scope="col" class="hidden"></th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr class="readonly">
-                                <td>
-                                  <a href="/heuristiskenhed.html#heeksemplarer"
-                                    >FRB. Politi</a
-                                  >
-                                </td>
-                                <td>Indenrigsministeriet</td>
-                                <td>Kredsaflytningssystem</td>
-                                <td>1972</td>
-                                <td>1988</td>
-                                <td>Papir</td>
-                                <td>Akvalie</td>
-                                <td>sh2048</td>
-                                <td width="20">
-                                  <a href="#" class="icon delete">
-                                    <svg
-                                      xmlns="http://www.w3.org/2000/svg"
-                                      width="24"
-                                      height="24"
-                                      viewBox="0 0 12 16"
-                                    >
-                                      <path
-                                        fill-rule="evenodd"
-                                        d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
-                                      />
-                                    </svg>
-                                  </a>
-                                </td>
-                              </tr>
-                              <tr class="readonly">
-                                <td>
-                                  <a href="/heuristiskenhed.html#heeksemplarer"
-                                    >FRB. Politi</a
-                                  >
-                                </td>
-                                <td>Indenrigsministeriet</td>
-                                <td>Kredsaflytningssystem</td>
-                                <td>1972</td>
-                                <td>1988</td>
-                                <td>Pap</td>
-                                <td>Akvalie</td>
-                                <td>sh2048</td>
-                                <td width="20">
-                                  <a href="#" class="icon delete">
-                                    <svg
-                                      xmlns="http://www.w3.org/2000/svg"
-                                      width="24"
-                                      height="24"
-                                      viewBox="0 0 12 16"
-                                    >
-                                      <path
-                                        fill-rule="evenodd"
-                                        d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
-                                      />
-                                    </svg>
-                                  </a>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
+                            <h4 class="font-weight-bold ml-3 mb-0">
+                              <div class="d-flex align-items-center">
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  width="24"
+                                  height="24"
+                                  viewBox="0 0 16 16"
+                                >
+                                  <path
+                                    fill-rule="evenodd"
+                                    fill="#686868"
+                                    d="M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z"
+                                  />
+                                </svg>
+
+                                <span class="ml-3">Eksemplarer</span>
+                              </div>
+                            </h4>
+                            <button
+                              class="btn btn-outline-primary d-flex align-items-center mr-3"
+                            >
+                              <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 32 32"
+                                class="mr-2"
+                              >
+                                <g
+                                  fill="none"
+                                  stroke="#FFF"
+                                  stroke-linecap="round"
+                                  stroke-linejoin="round"
+                                  stroke-miterlimit="10"
+                                  stroke-width="2"
+                                >
+                                  <path
+                                    d="M649 137.999h26v18h-14M653 155.999h-4v-14M661 156l-8 6v-6"
+                                  />
+                                </g>
+                                <path
+                                  d="M29 13h-6V3a1 1 0 0 0-1-1H10a1 1 0 0 0-1 1v10H3a1 1 0 0 0 0 2h6v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2h5v10h-5v-1a1 1 0 0 0-1-1H10a1 1 0 0 0-1 1v1H4v-7a1 1 0 1 0-2 0v8a1 1 0 0 0 1 1h6v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2h6a1 1 0 0 0 1-1V14a1 1 0 0 0-1-1zm-8 3H11V4h10v12zm0 12H11v-3h10v3z"
+                                />
+                              </svg>
+                              <span>Udskriv etiketter</span>
+                            </button>
+                          </div>
+                          <div class="card bg-white ml-3 mr-3">
+                            <div class="card-body p-0 m-0">
+                              <table
+                                id="eksemplar-tabel"
+                                width="100%"
+                                class="table table-hover sorting table-striped mb-0"
+                              >
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Navn</th>
+                                    <th scope="col">Type</th>
+                                    <th scope="col">HE-Navn</th>
+                                    <th scope="col">HE-Fra</th>
+                                    <th scope="col">HE-Til</th>
+                                    <th scope="col">Eks. Type</th>
+                                    <th scope="col">Eks. Navn</th>
+                                    <th scope="col">Sort. felt.</th>
+                                    <th scope="col" class="hidden"></th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr class="readonly">
+                                    <td>
+                                      <a
+                                        href="/heuristiskenhed.html#heeksemplarer"
+                                        >FRB. Politi</a
+                                      >
+                                    </td>
+                                    <td>Indenrigsministeriet</td>
+                                    <td>Kredsaflytningssystem</td>
+                                    <td>1972</td>
+                                    <td>1988</td>
+                                    <td>Papir</td>
+                                    <td>Akvalie</td>
+                                    <td>sh2048</td>
+                                    <td width="20">
+                                      <a href="#" class="icon delete">
+                                        <svg
+                                          xmlns="http://www.w3.org/2000/svg"
+                                          width="24"
+                                          height="24"
+                                          viewBox="0 0 12 16"
+                                        >
+                                          <path
+                                            fill-rule="evenodd"
+                                            d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                                          />
+                                        </svg>
+                                      </a>
+                                    </td>
+                                  </tr>
+                                  <tr class="readonly">
+                                    <td>
+                                      <a
+                                        href="/heuristiskenhed.html#heeksemplarer"
+                                        >FRB. Politi</a
+                                      >
+                                    </td>
+                                    <td>Indenrigsministeriet</td>
+                                    <td>Kredsaflytningssystem</td>
+                                    <td>1972</td>
+                                    <td>1988</td>
+                                    <td>Pap</td>
+                                    <td>Akvalie</td>
+                                    <td>sh2048</td>
+                                    <td width="20">
+                                      <a href="#" class="icon delete">
+                                        <svg
+                                          xmlns="http://www.w3.org/2000/svg"
+                                          width="24"
+                                          height="24"
+                                          viewBox="0 0 12 16"
+                                        >
+                                          <path
+                                            fill-rule="evenodd"
+                                            d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                                          />
+                                        </svg>
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                          </div>
+                          <button
+                            class="btn btn-outline-primary readonly btn-sm mt-3 ml-3"
+                            data-toggle="modal"
+                            data-target="#tilfoejeks"
+                          >
+                            <span class="d-flex align-items-center">
+                              <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="12"
+                                height="16"
+                                viewBox="0 0 12 16"
+                                class="mr-2"
+                              >
+                                <path
+                                  fill-rule="evenodd"
+                                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                                />
+                              </svg>
+                              <span>Tilknyt Eksemplar</span></span
+                            >
+                          </button>
                         </div>
                       </div>
-                      <button
-                        class="btn btn-outline-primary readonly btn-sm mt-3 ml-3"
-                        data-toggle="modal"
-                        data-target="#tilfoejeks"
-                      >
-                        <span class="d-flex align-items-center">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="12"
-                            height="16"
-                            viewBox="0 0 12 16"
-                            class="mr-2"
-                          >
-                            <path
-                              fill-rule="evenodd"
-                              d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
-                            />
-                          </svg>
-                          <span>Tilknyt Eksemplar</span></span
-                        >
-                      </button>
                     </div>
                   </div>
                 </div>
