--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -1355,7 +1355,7 @@ of Lorem Ipsum.
                         </clipPath>
                         <path clip-path="url(#b)" d="M20 9H4v2h16V9zM4 15h16v-2H4v2z" />
                       </svg></td>
-                    <td>Plads1</td>
+                    <td>1</td>
                     <td>
                       <div class="form-group mb-0">
                         <select class="form-control" id="exampleFormControlSelect1">
@@ -1395,7 +1395,7 @@ of Lorem Ipsum.
                         </clipPath>
                         <path clip-path="url(#b)" d="M20 9H4v2h16V9zM4 15h16v-2H4v2z" />
                       </svg></td>
-                    <td>Plads2</td>
+                    <td>2</td>
                     <td>
                       <div class="form-group mb-0">
                         <select class="form-control" id="exampleFormControlSelect1">
@@ -1432,13 +1432,8 @@ of Lorem Ipsum.
             </div>
             <div class="col-sm-6">
               <div class="form-group mb-0">
-                <select class="form-control" id="exampleFormControlSelect1">
-                  <option>Rolle</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
+                <label for="rolle">Rolle</label>
+                <input id="rolle" type="text" class="form-control" placeholder="Rolle">
               </div>
             </div>
           </div>
