--- a/hif.html
+++ b/hif.html
@@ -78,10 +78,7 @@
                     <div class="col-sm-6">
                       <div class="form-group">
                         <label class="font-weight-semibold" for="betegnelse"
-                          >Betegnelse
-                          <small class="ml-1 text-secondary"
-                            >(Valgfrit)</small
-                          ></label
+                          >Betegnelse </label
                         ><input
                           id="betegnelse"
                           class="form-control"
@@ -118,9 +115,7 @@
                         <th scope="col">DIF Skabelon</th>
                         <th scope="col">DIF Betegnelse</th>
                         <th scope="col">Sløres</th>
-                        <th scope="col" class="text-center hidden">
-                          Tilknyttet DIF
-                        </th>
+                        <th scope="col" class="hidden"></th>
                         <th scope="col" class="hidden"></th>
                       </tr>
                     </thead>
@@ -179,12 +174,7 @@
                           </div>
                         </td>
                         <td class="text-center">
-                          <div class="d-flex align-items-center flex-column">
-                            <b>Journalnr.</b>
-                            <a class="link text-danger"
-                              ><small>Fjern DIF</small></a
-                            >
-                          </div>
+                          &nbsp;
                         </td>
                         <td width="25" class="text-right">
                           <a href="#" class="delete icon">
@@ -234,10 +224,11 @@
                               id="exampleFormControlSelect1"
                             >
                               <option>Løbenr.</option>
-                              <option>2</option>
-                              <option>3</option>
-                              <option>4</option>
-                              <option>5</option>
+                              <option>Fastnr.</option>
+                              <option>År</option>
+                              <option>Måned</option>
+                              <option>Dag</option>
+                              <option>Saggruppe</option>
                             </select>
                           </div>
                         </td>
@@ -256,9 +247,90 @@
                           </div>
                         </td>
                         <td class="text-center">
-                          <button class="btn btn-sm btn-outline-secondary">
-                            Tilknyt DIF
-                          </button>
+                          &nbsp;
+                        </td>
+                        <td width="25" class="text-right">
+                          <a href="#" class="delete icon">
+                            <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="24"
+                              height="24"
+                              viewBox="0 0 12 16"
+                            >
+                              <path
+                                fill-rule="evenodd"
+                                d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                              />
+                            </svg>
+                          </a>
+                        </td>
+                      </tr>
+                      <tr style="display:none;">
+                        <td>3</td>
+                        <td>
+                          <svg
+                            class="handle"
+                            xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                          >
+                            <defs>
+                              <path id="a" d="M0 0h24v24H0V0z" />
+                            </defs>
+                            <clipPath id="b">
+                              <use xlink:href="#a" overflow="visible" />
+                            </clipPath>
+                            <path
+                              clip-path="url(#b)"
+                              d="M20 9H4v2h16V9zM4 15h16v-2H4v2z"
+                            />
+                          </svg>
+                        </td>
+                        <td>3</td>
+                        <td>
+                          <div class="form-group mb-0 ml-2">
+                            Journalnr.
+                          </div>
+                        </td>
+                        <td>
+                          <div class="form-group mb-0 ml-2">
+                            Journalnr.
+                          </div>
+                        </td>
+                        <td width="25">
+                          <div
+                            class="form-check text-center form-inline d-flex align-items-center"
+                          >
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              checked
+                              disabled
+                            />
+                          </div>
+                        </td>
+                        <td class="text-center">
+                          <a
+                            href="#"
+                            class="icon"
+                            data-toggle="modal"
+                            data-target="#tilknytDIF"
+                          >
+                            <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="20"
+                              height="20"
+                              viewBox="0 0 20 20"
+                            >
+                              <path
+                                fill="#000"
+                                fill-rule="nonzero"
+                                d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
+                              />
+                            </svg>
+                          </a>
                         </td>
                         <td width="25" class="text-right">
                           <a href="#" class="delete icon">
@@ -280,23 +352,44 @@
                   </table>
                 </div>
               </div>
-              <button
-                class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 addrow-8"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="12"
-                  height="16"
-                  viewBox="0 0 12 16"
-                  class="mr-2"
+              <div class="d-flex align-items-center">
+                <button
+                  class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 addrow-9"
                 >
-                  <path
-                    fill-rule="evenodd"
-                    d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
-                  />
-                </svg>
-                <span>Tilføj ny DIF</span>
-              </button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="16"
+                    viewBox="0 0 12 16"
+                    class="mr-2"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                    />
+                  </svg>
+                  <span>Tilføj ny DIF</span>
+                </button>
+                <button
+                  class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 ml-2"
+                  data-toggle="modal"
+                  data-target="#tilknytDIF"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="16"
+                    viewBox="0 0 12 16"
+                    class="mr-2"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                    />
+                  </svg>
+                  <span>Tilknyt eksisterende DIF</span>
+                </button>
+              </div>
               <div class="row bg p-lg-3">
                 <div class="col-sm-12 text-right">
                   <form action="/heuristiskenhed.html#adresseringsnetvaerk">
@@ -314,7 +407,224 @@
         </div>
       </div>
     </div>
-
+    <!-- Modal Tilknyt DIF -->
+    <div
+      class="modal fade"
+      id="tilknytDIF"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="tilknytDIFModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title font-weight-bold" id="tilknytDIFModalLabel">
+              Tilknyt DIF
+            </h5>
+            <button
+              type="button"
+              class="btn close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 12 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                  />
+                </svg>
+              </span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb"></ol>
+            </nav>
+            <div
+              id="carousel"
+              class="carousel slide"
+              data-ride="carousel"
+              data-interval="false"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="card bg-light">
+                    <div class="card-body">
+                      <div class="d-flex align-items-center mb-3">
+                        <div class="form-check form-check-inline mr-4">
+                          <input
+                            class="form-check-input"
+                            type="radio"
+                            name="exampleRadios"
+                            id="exampleRadios1"
+                            value="option1"
+                            checked
+                          />
+                          <label
+                            class="form-check-label ml-2"
+                            for="exampleRadios1"
+                          >
+                            Arkivskaber
+                          </label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input
+                            class="form-check-input"
+                            type="radio"
+                            name="exampleRadios"
+                            id="exampleRadios2"
+                            value="option2"
+                          />
+                          <label
+                            class="form-check-label ml-2"
+                            for="exampleRadios2"
+                          >
+                            Arbejdsopgave
+                          </label>
+                        </div>
+                      </div>
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <input
+                          type="text"
+                          class="form-control form-control-lg"
+                          placeholder="Søg..."
+                          value="Frederiksberg Politi"
+                        />
+                        <button class="btn btn-primary btn-lg ml-2">Søg</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card mt-3">
+                    <div class="card-body p-0">
+                      <h4 class="mb-3 ml-3 mt-3">
+                        <span class="font-weight-bold">33</span> resultater
+                      </h4>
+                    </div>
+                  </div>
+                  <div class="card mt-3 mb-3">
+                    <div class="card-body p-0">
+                      <div class="table-responsive">
+                        <table
+                          id=""
+                          width="100%"
+                          class="table sorting table-hover table-striped mb-0"
+                        >
+                          <thead>
+                            <tr>
+                              <th scope="col">HE betegnelse</th>
+                              <th scope="col">Sorteringsfelt</th>
+                              <th scope="col">HE-Fra</th>
+                              <th scope="col">HE-Til</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr data-slide-to="1" data-target="#carousel">
+                              <td><a href="#">Kredsaflytningssystem</a></td>
+                              <td>sh29942</td>
+                              <td>1988</td>
+                              <td>2020</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <h5 class="font-weight-bold mb-3 mt-3">
+                    Vælg Identifikatorformater i markeret eksemplar
+                  </h5>
+                  <div class="card mt-3 mb-3">
+                    <div class="card-body p-0">
+                      <div class="table-responsive">
+                        <table
+                          id=""
+                          width="100%"
+                          class="table sorting table-hover table-striped mb-0"
+                        >
+                          <thead>
+                            <tr>
+                              <th scope="col">Type</th>
+                              <th scope="col">Betegnelse</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr data-slide-to="2" data-target="#carousel">
+                              <td><a href="#">HIF</a></td>
+                              <td>Journalnr</td>
+                            </tr>
+                            <tr data-slide-to="2" data-target="#carousel">
+                              <td><a href="#">FIF</a></td>
+                              <td>Løbenr.</td>
+                            </tr>
+                            <tr data-slide-to="2" data-target="#carousel">
+                              <td><a href="#">RIF</a></td>
+                              <td>Dato</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <h5 class="font-weight-bold mb-3 mt-3">
+                    Vælg DIF'er fra markeret Identifikatorformat
+                  </h5>
+                  <div class="card mt-3 mb-3">
+                    <div class="card-body p-0">
+                      <div class="table-responsive">
+                        <table
+                          id=""
+                          width="100%"
+                          class="table sorting table-hover table-striped mb-0"
+                        >
+                          <thead>
+                            <tr>
+                              <th scope="col">DIF betegnelse</th>
+                              <th scope="col">Type</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr
+                              data-slide-to="0"
+                              data-target="#carousel"
+                              data-dismiss="modal"
+                              class="addrow-8"
+                            >
+                              <td><a href="#">Journalnr</a></td>
+                              <td>Journalnr</td>
+                            </tr>
+                            <tr
+                              data-slide-to="0"
+                              data-target="#carousel"
+                              data-dismiss="modal"
+                              class="addrow-8"
+                            >
+                              <td><a href="#">År</a></td>
+                              <td>År</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
